--- a/2018/birthday-mom/inside.css
+++ b/2018/birthday-mom/inside.css
@@ -8,8 +8,12 @@
   display: flex;
 }
 .right div div {
-  border: 1px solid black; 
+  border-bottom: 1px solid black; 
   flex-basis: 50%;
+  border-bottom-left-radius: 50%;
+}
+.right div span {
+  font-family: "Carter One";
 }
 h1 {
   font-family: "Lobster";
